<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <RelativeLayout xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/activity_nav_about"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:paddingBottom="@dimen/activity_vertical_margin"
        tools:context="com.hxd.lease.ui.slider.NavAboutActivity">

        <LinearLayout
            android:id="@+id/ll_content"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/iv_icon"
                android:layout_width="66dp"
                android:layout_height="66dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="50dp"
                android:scaleType="centerCrop" />

            <TextView
                android:id="@+id/tv_version_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="10dp"
                android:text="@string/string_current_version"
                android:textColor="@color/colorSubtitle"
                android:textSize="13sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="50dp"
                android:orientation="vertical">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="50dp">

                    <TextView
                        android:id="@+id/tv_new_version"
                        style="@style/menuItem"
                        android:clickable="true"
                        android:focusable="true"
                        android:onClick="checkUpdate"
                        android:text="@string/string_check_update" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        android:layout_centerVertical="true"
                        android:layout_marginEnd="15dp"
                        android:text=""
                        android:textColor="@color/colorSubtitle"
                        android:textSize="13sp"
                        android:visibility="gone" />
                </RelativeLayout>

                <View
                    style="@style/horizontalLine"
                    android:layout_marginStart="10dp" />

                <TextView
                    android:id="@+id/tv_function"
                    style="@style/menuItem"
                    android:clickable="true"
                    android:focusable="true"
                    android:text="@string/string_update_log" />

                <View
                    style="@style/horizontalLine"
                    android:layout_marginStart="10dp" />

                <TextView
                    android:id="@+id/tv_about_star"
                    style="@style/menuItem"
                    android:clickable="true"
                    android:focusable="true"
                    android:text="@string/string_give_star" />


            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="20dp"
                android:gravity="center_horizontal"
                android:lineSpacingExtra="2dp"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                android:text="@string/string_star_description"
                android:textColor="@color/colorSubtitle"
                android:textSize="14sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:gravity="center"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/string_left_arrow"
                    android:textColor="@color/colorContent"
                    android:textSize="13sp" />

                <TextView
                    android:id="@+id/tv_gankio"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/string_gank"
                    android:textColor="@color/colorContent"
                    android:textSize="13sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/string_right_arrow"
                    android:textColor="@color/colorContent"
                    android:textSize="13sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/string_left_arrow"
                    android:textColor="@color/colorContent"
                    android:textSize="13sp" />

                <TextView
                    android:id="@+id/tv_douban"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/string_douban"
                    android:textColor="@color/colorContent"
                    android:textSize="13sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/string_right_arrow"
                    android:textColor="@color/colorContent"
                    android:textSize="13sp" />
            </LinearLayout>

        </LinearLayout>
    </RelativeLayout>
</layout>