<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <LinearLayout xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/activity_nav_download"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        tools:context="com.hxd.lease.ui.slider.NavDownloadActivity">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="12dp"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            android:layout_marginTop="12dp"
            android:background="@drawable/shape_not_clickable_bg"
            android:lineSpacingExtra="2dp"
            android:padding="12dp"
            android:text="@string/string_scan_download"
            android:textColor="#666666"
            android:textSize="15sp" />

        <ImageView
            android:id="@+id/iv_qr_code"
            android:layout_width="220dp"
            android:layout_height="220dp"
            android:layout_marginTop="40dp" />


        <TextView
            android:id="@+id/tv_share"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="30dp"
            android:background="@drawable/ripple_item_white_background"
            android:gravity="center_vertical"
            android:paddingStart="10dp"
            android:paddingEnd="12dp"
            android:text="@string/string_share_app"
            android:textColor="@color/text_common"
            android:textSize="17sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="20dp"
            android:gravity="center_horizontal"
            android:lineSpacingExtra="2dp"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:text="@string/string_satisfied_star"
            android:textColor="@color/colorSubtitle"
            android:textSize="14sp" />
    </LinearLayout>
</layout>