<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <data>

        <variable
            name="register"
            type="com.hxd.lease.vmodel.login.RegisterViewModel" />
    </data>

    <ScrollView
        android:id="@+id/register_form"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorAppBackground"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:layout_margin="20dp"
                android:background="@drawable/shape_login_info_background"
                android:baselineAligned="false"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="start"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_marginStart="15dp"
                        android:layout_weight="1"
                        android:gravity="center_vertical|start"
                        android:text="@string/phone"
                        android:textColor="@color/colorBlack"
                        android:textSize="15sp"
                        android:typeface="serif"
                        tools:ignore="NestedWeights" />

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1px"
                        android:background="@color/colorSeparatorLine" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_marginStart="15dp"
                        android:layout_weight="1"
                        android:gravity="center_vertical|start"
                        android:text="@string/code"
                        android:textColor="@color/colorBlack"
                        android:textSize="15sp"
                        android:typeface="serif" />

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1px"
                        android:background="@color/colorSeparatorLine" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_marginStart="15dp"
                        android:layout_weight="1"
                        android:gravity="center_vertical|start"
                        android:text="@string/password"
                        android:textColor="@color/colorBlack"
                        android:textSize="15sp"
                        android:typeface="serif" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="3"
                    android:orientation="vertical">

                    <EditText
                        android:id="@+id/et_account"
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="1"
                        android:background="@null"
                        android:gravity="center_vertical|start"
                        android:hint="@string/phone_or_account"
                        android:importantForAutofill="no"
                        android:inputType="number"
                        android:maxLength="11"
                        android:text="@={register.account}"
                        android:textColor="@color/colorDarkGray"
                        android:textColorHint="@color/colorLightGray"
                        android:textSize="15sp"
                        android:typeface="serif"
                        tools:ignore="NestedWeights"
                        tools:targetApi="o" />

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1px"
                        android:background="@color/colorSeparatorLine" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="1"
                        android:orientation="horizontal">

                        <EditText
                            android:id="@+id/et_code"
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight="2"
                            android:background="@null"
                            android:gravity="center_vertical|start"
                            android:hint="@string/sms_code"
                            android:inputType="number"
                            android:maxLength="6"
                            android:text="@={register.code}"
                            android:textColor="@color/colorDarkGray"
                            android:textColorHint="@color/colorLightGray"
                            android:textSize="15sp"
                            android:typeface="serif" />

                        <Button
                            android:id="@+id/btn_get_code"
                            style="?android:attr/borderlessButtonStyle"
                            android:layout_width="wrap_content"
                            android:layout_height="36dp"
                            android:layout_gravity="center"
                            android:layout_marginEnd="5dp"
                            android:layout_marginStart="5dp"
                            android:background="@drawable/shape_get_code_button"
                            android:paddingEnd="10dp"
                            android:paddingStart="10dp"
                            android:singleLine="true"
                            android:text="@string/get_code"
                            android:textColor="@color/colorMainBlue"
                            android:textSize="12sp"
                            android:typeface="serif" />

                    </LinearLayout>

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1px"
                        android:background="@color/colorSeparatorLine" />

                    <EditText
                        android:id="@+id/et_password"
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="1"
                        android:background="@null"
                        android:gravity="center_vertical|start"
                        android:hint="@string/input_password"
                        android:inputType="textPassword"
                        android:maxLength="16"
                        android:minEms="6"
                        android:text="@={register.password}"
                        android:textColor="@color/colorDarkGray"
                        android:textColorHint="@color/colorLightGray"
                        android:textSize="15sp"
                        android:typeface="serif" />

                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginEnd="20dp"
                android:layout_marginStart="20dp"
                android:background="@drawable/shape_login_info_background"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center_vertical|start"
                    android:paddingStart="15dp"
                    android:text="@string/referrer"
                    android:textColor="@color/colorBlack"
                    android:textSize="15sp"
                    android:typeface="serif"
                    tools:ignore="RtlSymmetry" />

                <EditText
                    android:id="@+id/et_referrer"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="3"
                    android:background="@null"
                    android:gravity="center_vertical|start"
                    android:hint="@string/referrer_phone"
                    android:inputType="number"
                    android:maxLength="11"
                    android:text="@={register.referee_tel}"
                    android:textColor="@color/colorDarkGray"
                    android:textColorHint="@color/colorLightGray"
                    android:textSize="15sp"
                    android:typeface="serif"
                    tools:ignore="NestedWeights" />

            </LinearLayout>

            <Button
                android:id="@+id/btn_register"
                android:layout_width="match_parent"
                android:layout_height="46dp"
                android:layout_marginEnd="20dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="40dp"
                android:background="@drawable/shape_gray_button"
                android:onClick="register"
                android:text="@string/register"
                android:textColor="@color/colorWhite"
                android:textSize="16sp"
                android:typeface="serif" />

        </LinearLayout>
    </ScrollView>

</layout>